# simplify

./: README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
simplify/: __main__.py  bindings.py  data.py  environment.py  exceptions.py  main.py  scope.py  simplifier.py  utils.py
simplify/rules/: control_flow.py  expressions.py  function_and_class_defs.py  statements.py  variables.py
tests/: test_bindings.py  test_control_flow.py  test_expressions.py  test_function_and_class_defs.py  test_scope.py  test_simplify.py  test_statements.py
tests/test_rules/: test_control_flow.py  test_expressions.py  test_statements.py
